// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component:  create game component initializes 1`] = `
<app-create-game
  choices={[Function Object]}
  chosenFriends={[Function Array]}
  createGameText={[Function String]}
  disableCreate={[Function Boolean]}
  featureCache={[Function MockFeatureService]}
  friendService={[Function MockFriendService]}
  friends={[Function Array]}
  gameActions={[Function MockBoostrapActions]}
  groups={[Function Array]}
  ngbModal={[Function MockModal]}
>
  <div
    class="create-game"
  >
    
    
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      
      
      
      
      <ngb-tabset
        ng-reflect-type="pills"
        type="pills"
      >
        
      
        <ul
          class="nav nav-pills justify-content-start"
          role="tablist"
        >
          
        
          
          
      
        </ul>
        
      
        <div
          class="tab-content"
        >
          
        
          
          
      
        </div>
        
    
      </ngb-tabset>
      
      
      <div
        class="row"
      >
        
        
        <label
          class="option-label col-md-2"
        >
          Opponents
        </label>
        
        
        <div
          class="col-md-10"
        >
          
          
          <p-multiselect
            class="ui-inputwrapper-filled ng-untouched ng-pristine ng-valid"
            datakey="md5"
            maxselectedlabels="10"
            ng-reflect-data-key="md5"
            ng-reflect-max-selected-labels="10"
            ng-reflect-model=""
            ng-reflect-option-label="displayName"
            ng-reflect-options="[object Object]"
            optionlabel="displayName"
          >
            
          
            <div
              class="ui-multiselect ui-widget ui-state-default ui-corner-all"
              ng-reflect-ng-class="[object Object]"
            >
              
              
              <div
                class="ui-helper-hidden-accessible"
              >
                
                  
                <input
                  readonly="readonly"
                  type="text"
                />
                
              
              </div>
              
              
              <div
                class="ui-multiselect-label-container"
                title="Choose"
              >
                
                  
                <label
                  class="ui-multiselect-label ui-corner-all"
                >
                  Choose
                </label>
                
              
              </div>
              
              
              <div
                class="ui-multiselect-trigger ui-state-default ui-corner-right"
                ng-reflect-ng-class="[object Object]"
              >
                
                  
                <span
                  class="ui-clickable fa fa-fw fa-caret-down"
                  ng-reflect-klass="ui-clickable"
                  ng-reflect-ng-class="fa fa-fw fa-caret-down"
                />
                
              
              </div>
              
              
              <div
                class="ui-multiselect-panel ui-widget ui-widget-content ui-corner-all ui-shadow"
                ng-reflect-ng-class="ui-multiselect-panel ui-widget"
                style="display: none;"
              >
                
                  
                <div
                  class="ui-widget-header ui-corner-all ui-multiselect-header ui-helper-clearfix"
                  ng-reflect-klass="ui-widget-header ui-corner-all"
                  ng-reflect-ng-class="[object Object]"
                >
                  
                      
                  
                  <div
                    class="ui-chkbox ui-widget"
                  >
                    
                          
                    <div
                      class="ui-helper-hidden-accessible"
                    >
                      
                              
                      <input
                        readonly="readonly"
                        type="checkbox"
                      />
                      
                          
                    </div>
                    
                          
                    <div
                      class="ui-chkbox-box ui-widget ui-corner-all ui-state-default"
                      ng-reflect-klass="ui-chkbox-box ui-widget ui-cor"
                      ng-reflect-ng-class="[object Object]"
                    >
                      
                              
                      <span
                        class="ui-chkbox-icon ui-clickable"
                        ng-reflect-klass="ui-chkbox-icon ui-clickable"
                        ng-reflect-ng-class="[object Object]"
                      />
                      
                          
                    </div>
                    
                      
                  </div>
                  
                      
                  
                  <div
                    class="ui-multiselect-filter-container"
                  >
                    
                          
                    <input
                      class="ui-inputtext ui-widget ui-state-default ui-corner-all"
                      role="textbox"
                      type="text"
                    />
                    
                          
                    <span
                      class="fa fa-fw fa-search"
                    />
                    
                      
                  </div>
                  
                      
                  <a
                    class="ui-multiselect-close ui-corner-all"
                    href="#"
                  >
                    
                          
                    <span
                      class="fa fa-close"
                    />
                    
                      
                  </a>
                  
                  
                </div>
                
                  
                <div
                  class="ui-multiselect-items-wrapper"
                >
                  
                      
                  <ul
                    class="ui-multiselect-items ui-multiselect-list ui-widget-content ui-widget ui-corner-all ui-helper-reset"
                    style="max-height: 200px;"
                  >
                    
                          
                    
                    
                      
                  </ul>
                  
                  
                </div>
                
              
              </div>
              
          
            </div>
            
      
          </p-multiselect>
          
        
        </div>
        
      
      </div>
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-md-6"
        >
          
          
          <button
            class="btn btn-primary create-game-button w-100"
            disabled=""
          >
            
            Create Game!
          
          </button>
          
        
        </div>
        
        
        <div
          class="col-md-6"
        >
          
          
          <button
            class="btn btn-info invite-friends-button w-100"
          >
            
            Invite friends to play
          
          </button>
          
        
        </div>
        
      
      </div>
      
    
    </form>
    
  
  </div>
  
</app-create-game>
`;

exports[`Component:  create game component subscribes to friends 1`] = `
<app-create-game
  choices={[Function Object]}
  chosenFriends={[Function Array]}
  createGameText={[Function String]}
  disableCreate={[Function Boolean]}
  featureCache={[Function MockFeatureService]}
  friendService={[Function MockFriendService]}
  friends={[Function Array]}
  gameActions={[Function MockBoostrapActions]}
  groups={[Function Array]}
  ngbModal={[Function MockModal]}
>
  <div
    class="create-game"
  >
    
    
    <form
      novalidate=""
    >
      
      
      
      
      <ngb-tabset
        type="pills"
      >
        
      
        <ul
          role="tablist"
        >
          
        
          
          
      
        </ul>
        
      
        <div
          class="tab-content"
        >
          
        
          
          
      
        </div>
        
    
      </ngb-tabset>
      
      
      <div
        class="row"
      >
        
        
        <label
          class="option-label col-md-2"
        >
          Opponents
        </label>
        
        
        <div
          class="col-md-10"
        >
          
          
          <p-multiselect
            datakey="md5"
            maxselectedlabels="10"
            optionlabel="displayName"
          >
            
          
            <div>
              
              
              <div
                class="ui-helper-hidden-accessible"
              >
                
                  
                <input
                  readonly="readonly"
                  type="text"
                />
                
              
              </div>
              
              
              <div
                class="ui-multiselect-label-container"
              >
                
                  
                <label
                  class="ui-multiselect-label ui-corner-all"
                >
                  
                </label>
                
              
              </div>
              
              
              <div>
                
                  
                <span
                  class="ui-clickable"
                />
                
              
              </div>
              
              
              <div>
                
                  
                <div
                  class="ui-widget-header ui-corner-all ui-multiselect-header ui-helper-clearfix"
                >
                  
                      
                  
                  
                      
                  
                  
                      
                  <a
                    class="ui-multiselect-close ui-corner-all"
                    href="#"
                  >
                    
                          
                    <span
                      class="fa fa-close"
                    />
                    
                      
                  </a>
                  
                  
                </div>
                
                  
                <div
                  class="ui-multiselect-items-wrapper"
                >
                  
                      
                  <ul
                    class="ui-multiselect-items ui-multiselect-list ui-widget-content ui-widget ui-corner-all ui-helper-reset"
                  >
                    
                          
                    
                    
                      
                  </ul>
                  
                  
                </div>
                
              
              </div>
              
          
            </div>
            
      
          </p-multiselect>
          
        
        </div>
        
      
      </div>
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-md-6"
        >
          
          
          <button
            class="btn btn-primary create-game-button w-100"
          >
            
            
          </button>
          
        
        </div>
        
        
        <div
          class="col-md-6"
        >
          
          
          <button
            class="btn btn-info invite-friends-button w-100"
          >
            
            Invite friends to play
          
          </button>
          
        
        </div>
        
      
      </div>
      
    
    </form>
    
  
  </div>
  
</app-create-game>
`;

exports[`Component:  create game component subscribes to game features 1`] = `
<app-create-game
  choices={[Function Object]}
  chosenFriends={[Function Array]}
  createGameText={[Function String]}
  disableCreate="false"
  featureCache={[Function MockFeatureService]}
  friendService={[Function MockFriendService]}
  friends={[Function Array]}
  gameActions={[Function MockBoostrapActions]}
  groups={[Function Array]}
  ngbModal={[Function MockModal]}
>
  <div
    class="create-game"
  >
    
    
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      
      
      
      
      <ngb-tabset
        ng-reflect-type="pills"
        type="pills"
      >
        
      
        <ul
          class="nav nav-pills justify-content-start"
          role="tablist"
        >
          
        
          
          <li
            class="nav-item"
          >
            
          
            <a
              aria-controls="Group1-panel"
              aria-disabled="false"
              aria-expanded="true"
              class="nav-link active"
              href=""
              id="Group1"
              role="tab"
            >
              
            Group1
              
              
          
            </a>
            
        
          </li>
          <li
            class="nav-item"
          >
            
          
            <a
              aria-disabled="false"
              aria-expanded="false"
              class="nav-link"
              href=""
              id="Group2"
              role="tab"
            >
              
            Group2
              
              
          
            </a>
            
        
          </li>
          
      
        </ul>
        
      
        <div
          class="tab-content"
        >
          
        
          
          
          
          
          <div
            aria-expanded="true"
            aria-labelledby="Group1"
            class="tab-pane active"
            id="Group1-panel"
            role="tabpanel"
          >
            
            
            
            
            
            
            <div
              class="form-group row"
            >
              
              
              <label
                class="option-label col-md-2"
                ng-reflect-ngb-tooltip="feature 1 desc"
              >
                feature 1
              </label>
              
              
              <div
                class="col-md-10"
              >
                
                
                <div
                  class="btn-group btn-group-toggle d-flex ng-untouched ng-pristine ng-valid"
                  ng-reflect-model="option1-1"
                  ng-reflect-name="feature1"
                  ngbradiogroup=""
                  role="group"
                >
                  
                  
                  
                  <label
                    class="btn-primary w-100 btn"
                    ng-reflect-ngb-tooltip="option 1-1 desc"
                    ngbbuttonlabel=""
                  >
                    
                    
                    <input
                      id="option1-1"
                      name="feature1"
                      ng-reflect-value="option1-1"
                      ngbbutton=""
                      type="radio"
                      value="option1-1"
                    />
                    
                    option 1-1
                  
                  </label>
                  
                  <label
                    class="btn-primary w-100 btn"
                    ng-reflect-ngb-tooltip="option 1-2 desc"
                    ngbbuttonlabel=""
                  >
                    
                    
                    <input
                      id="option1-2"
                      name="feature1"
                      ng-reflect-value="option1-2"
                      ngbbutton=""
                      type="radio"
                      value="option1-2"
                    />
                    
                    option 1-2
                  
                  </label>
                  
                  <label
                    class="btn-primary w-100 btn"
                    ng-reflect-ngb-tooltip="option 1-3 desc"
                    ngbbuttonlabel=""
                  >
                    
                    
                    <input
                      id="option1-3"
                      name="feature1"
                      ng-reflect-value="option1-3"
                      ngbbutton=""
                      type="radio"
                      value="option1-3"
                    />
                    
                    option 1-3
                  
                  </label>
                  
                  
                
                </div>
                
              
              </div>
              
            
            </div>
            <div
              class="form-group row"
            >
              
              
              <label
                class="option-label col-md-2"
                ng-reflect-ngb-tooltip="feature 2 desc"
              >
                feature 2
              </label>
              
              
              <div
                class="col-md-10"
              >
                
                
                <div
                  class="btn-group btn-group-toggle d-flex ng-untouched ng-pristine ng-valid"
                  ng-reflect-model="option2-1"
                  ng-reflect-name="feature2"
                  ngbradiogroup=""
                  role="group"
                >
                  
                  
                  
                  <label
                    class="btn-primary w-100 btn"
                    ng-reflect-ngb-tooltip="option 2-1 desc"
                    ngbbuttonlabel=""
                  >
                    
                    
                    <input
                      id="option2-1"
                      name="feature2"
                      ng-reflect-value="option2-1"
                      ngbbutton=""
                      type="radio"
                      value="option2-1"
                    />
                    
                    option 2-1
                  
                  </label>
                  
                  <label
                    class="btn-primary w-100 btn"
                    ng-reflect-ngb-tooltip="option 2-2 desc"
                    ngbbuttonlabel=""
                  >
                    
                    
                    <input
                      id="option2-2"
                      name="feature2"
                      ng-reflect-value="option2-2"
                      ngbbutton=""
                      type="radio"
                      value="option2-2"
                    />
                    
                    option 2-2
                  
                  </label>
                  
                  
                
                </div>
                
              
              </div>
              
            
            </div>
            
          
            
          
          </div>
          
        
          
          
          
          
        
          
      
        </div>
        
    
      </ngb-tabset>
      
      
      <div
        class="row"
      >
        
        
        <label
          class="option-label col-md-2"
        >
          Opponents
        </label>
        
        
        <div
          class="col-md-10"
        >
          
          
          <p-multiselect
            class="ui-inputwrapper-filled ng-untouched ng-pristine ng-valid"
            datakey="md5"
            maxselectedlabels="10"
            ng-reflect-data-key="md5"
            ng-reflect-max-selected-labels="10"
            ng-reflect-model=""
            ng-reflect-option-label="displayName"
            ng-reflect-options="[object Object]"
            optionlabel="displayName"
          >
            
          
            <div
              class="ui-multiselect ui-widget ui-state-default ui-corner-all"
              ng-reflect-ng-class="[object Object]"
            >
              
              
              <div
                class="ui-helper-hidden-accessible"
              >
                
                  
                <input
                  readonly="readonly"
                  type="text"
                />
                
              
              </div>
              
              
              <div
                class="ui-multiselect-label-container"
                title="Choose"
              >
                
                  
                <label
                  class="ui-multiselect-label ui-corner-all"
                >
                  Choose
                </label>
                
              
              </div>
              
              
              <div
                class="ui-multiselect-trigger ui-state-default ui-corner-right"
                ng-reflect-ng-class="[object Object]"
              >
                
                  
                <span
                  class="ui-clickable fa fa-fw fa-caret-down"
                  ng-reflect-klass="ui-clickable"
                  ng-reflect-ng-class="fa fa-fw fa-caret-down"
                />
                
              
              </div>
              
              
              <div
                class="ui-multiselect-panel ui-widget ui-widget-content ui-corner-all ui-shadow"
                ng-reflect-ng-class="ui-multiselect-panel ui-widget"
                style="display: none;"
              >
                
                  
                <div
                  class="ui-widget-header ui-corner-all ui-multiselect-header ui-helper-clearfix"
                  ng-reflect-klass="ui-widget-header ui-corner-all"
                  ng-reflect-ng-class="[object Object]"
                >
                  
                      
                  
                  <div
                    class="ui-chkbox ui-widget"
                  >
                    
                          
                    <div
                      class="ui-helper-hidden-accessible"
                    >
                      
                              
                      <input
                        readonly="readonly"
                        type="checkbox"
                      />
                      
                          
                    </div>
                    
                          
                    <div
                      class="ui-chkbox-box ui-widget ui-corner-all ui-state-default"
                      ng-reflect-klass="ui-chkbox-box ui-widget ui-cor"
                      ng-reflect-ng-class="[object Object]"
                    >
                      
                              
                      <span
                        class="ui-chkbox-icon ui-clickable"
                        ng-reflect-klass="ui-chkbox-icon ui-clickable"
                        ng-reflect-ng-class="[object Object]"
                      />
                      
                          
                    </div>
                    
                      
                  </div>
                  
                      
                  
                  <div
                    class="ui-multiselect-filter-container"
                  >
                    
                          
                    <input
                      class="ui-inputtext ui-widget ui-state-default ui-corner-all"
                      role="textbox"
                      type="text"
                    />
                    
                          
                    <span
                      class="fa fa-fw fa-search"
                    />
                    
                      
                  </div>
                  
                      
                  <a
                    class="ui-multiselect-close ui-corner-all"
                    href="#"
                  >
                    
                          
                    <span
                      class="fa fa-close"
                    />
                    
                      
                  </a>
                  
                  
                </div>
                
                  
                <div
                  class="ui-multiselect-items-wrapper"
                >
                  
                      
                  <ul
                    class="ui-multiselect-items ui-multiselect-list ui-widget-content ui-widget ui-corner-all ui-helper-reset"
                    style="max-height: 200px;"
                  >
                    
                          
                    
                    
                      
                  </ul>
                  
                  
                </div>
                
              
              </div>
              
          
            </div>
            
      
          </p-multiselect>
          
        
        </div>
        
      
      </div>
      
      
      <div
        class="row"
      >
        
        
        <div
          class="col-md-6"
        >
          
          
          <button
            class="btn btn-primary create-game-button w-100"
          >
            
            Create Game!
          
          </button>
          
        
        </div>
        
        
        <div
          class="col-md-6"
        >
          
          
          <button
            class="btn btn-info invite-friends-button w-100"
          >
            
            Invite friends to play
          
          </button>
          
        
        </div>
        
      
      </div>
      
    
    </form>
    
  
  </div>
  
</app-create-game>
`;
